--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 								</div>
 							</section>
 
-							<section class="pxl-content-main bg-image pxl-section-bgr-box" style="background-image: url('assets/images/bgr-section1.jpg');">
+							<section class="pxl-content-main bg-image pxl-section-bgr-box" style="background-image: url('assets/images/bgr-section1.jpg'); min-height: 700px;">
 								<div class="pxl-about-widget">
 									<div class="container container-fluid">
 										<div class="row row-custom">
@@ -456,7 +456,7 @@
 				<div class="row row-custom">
 					<div class="column-1 col-md-6 col-xl-4">
 						<div class="pxl-image-logo">
-							<img alt="logo-footer" src="assets/images/Logo.png" class="attachment-full">
+							<img alt="logo-footer" src="assets/images/Logo.png" class="attachment-full logo-footer">
 						</div>
 						<div class="pxl-address">
 							<p>268 St, South New York/NY 98944, United States</p>
