--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 	<a href="#" class="scroll-top on">
 		<i class="zmdi zmdi-long-arrow-up"></i>
 	</a>
-	<script type="text/javascript" src="assets/js/main.js"></script>
-	<script type="text/javascript" src="assets/js/slider.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/slider.js"></script>
 </body>
 </html>
